--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: cools cache studio
     <div class="row">
         <img src="assets/images/coolgif.gif" class="center-block">
     </div>
-     <a href="/portfolio.html"> <p class="enter d-inline-block"> enter cools cache studio </p> </a>
+     <a href="portfolio.html"> <p class="enter d-inline-block"> enter cools cache studio </p> </a>
 </div>
 
 
