--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@ permalink: /about
 
         <div class="line2"> </div>
         <div class="col-md-5 about-image-container">
-            <img src="/assets/images/about-me.png" class="about-image img-fluid">
+            <img src="https://makalatrezise.github.io//assets/images/about-me.png" class="about-image img-fluid">
         </div>
 
         <div class="line2"> </div>
