--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@ layout: default
       <div class="home-project-info">
 
         <div class="home-text centered-text"> 
-          <a href="{{post.url}}">
+          <a href="cools/{{post.url}}">
             <p class="capsule2"> {{ post.project-number }} </p>
             <br />
             <p class="capsule2"> {{ post.title}} </p>
