--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: cools cache studio
 
 <div class="landing-hero">
     <div class="row">
-        <img src="assets/images/coolgif.gif" class="center-block">
+        <img src="assets/images/coolgif.gif" class="center-block img-fluid">
     </div>
      <a href="portfolio.html"> <p class="enter d-inline-block"> enter cools cache studio </p> </a>
 </div>
